--- a/_config.yml
+++ b/_config.yml
@@ -191,6 +191,11 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _pages/blog.md
+  - _pages/repositories.md
+  - _pages/profiles.md
+  - _pages/dropdown.md
+  - _pages/books.md
 keep_files:
   - CNAME
   - .nojekyll
