--- a/_config.yml
+++ b/_config.yml
@@ -145,6 +145,8 @@ collections:
     output: true
   projects:
     output: true
+  art:
+    output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
@@ -194,6 +196,15 @@ exclude:
   - _books
   - _news/announcement_2.md
   - _news/announcement_3.md
+  - _projects/1_project.md
+  - _projects/2_project.md
+  - _projects/3_project.md
+  - _projects/4_project.md
+  - _projects/5_project.md
+  - _projects/6_project.md
+  - _projects/7_project.md
+  - _projects/8_project.md
+  - _projects/9_project.md
 keep_files:
   - CNAME
   - .nojekyll
@@ -266,8 +277,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Zhang]
+  first_name: [Calvin, C., C. J., CJ., C.J., Calvin Jialin]
 
   style: apa
   locale: en
