--- a/_config.yml
+++ b/_config.yml
@@ -204,6 +204,7 @@ exclude:
   - _projects/7_project.md
   - _projects/8_project.md
   - _projects/9_project.md
+  - _art/1_project.md
 keep_files:
   - CNAME
   - .nojekyll
